[gd_scene load_steps=6 format=3 uid="uid://bnjd3xnekunev"]

[ext_resource type="PackedScene" uid="uid://b0fveacr07rl2" path="res://Entities/Cats/cat.tscn" id="1_14mmn"]
[ext_resource type="Script" path="res://Entities/Cats/cat_miner.gd" id="2_c8ny4"]
[ext_resource type="Texture2D" uid="uid://da7tbrggx5xsi" path="res://Entities/Cats/pickax.png" id="2_i88cg"]
[ext_resource type="PackedScene" uid="uid://ck7pp5vhb1ofp" path="res://Debug/debug_panel.tscn" id="4_v7tq4"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jh4mq"]

[node name="CatMiner" instance=ExtResource("1_14mmn")]
collision_mask = 2
script = ExtResource("2_c8ny4")
speed_multiplier = 1.1

[node name="Sprite2D2" type="Sprite2D" parent="." index="1"]
position = Vector2(26, 2)
rotation = 0.285623
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_i88cg")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_jh4mq")
}

[node name="TimerMining" type="Timer" parent="." index="4"]
unique_name_in_owner = true
one_shot = true

[node name="TimerStoring" type="Timer" parent="." index="5"]
unique_name_in_owner = true
one_shot = true

[node name="DebugPanel" parent="." index="6" instance=ExtResource("4_v7tq4")]
unique_name_in_owner = true
offset_left = -20.0
offset_top = -69.0
offset_right = 20.0
offset_bottom = -29.0
scale = Vector2(1, 1)

[connection signal="timeout" from="TimerMining" to="." method="_on_timer_mining_timeout"]
[connection signal="timeout" from="TimerStoring" to="." method="_on_timer_storing_timeout"]
